# webpush

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  gen_key.sh
frontend/: app.js  index.html  manifest.json  service-worker.js
migrations/: 0001_create_subscriptions.sql
src/: main.rs  ssl.rs
