[package]
name = "webpush"
version = "0.1.0"
authors = ["luismax@gmail.com"]
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
web-push = "0.10.2"
uuid = { version = "1.0", features = ["v7"] }
tower = "0.5.2"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["fs"] }
