[package]
name = "webpush"
version = "0.1.0"
authors = ["luismax@gmail.com"]
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
web-push = "0.10.2"
uuid = { version = "1.0", features = ["v7"] }
tower = "0.5.2"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["fs"] }
qrcode = "0.14.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.19"
openssl = "0.10.70"
isahc = "1.7.2"
